--- a/AnsibleWorkShop/roles/ansible-podman-rootless-provision/defaults/main.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-provision/defaults/main.yml
@@ -19,7 +19,7 @@ defaults_cgroups_delegation:
   all_users:
     skipped: false
     state: present
-    rc_conf_override: true
+    present_override: true
     resources: cpu cpuset memory pids
   per_user:
     skipped: false
