--- a/AnsibleWorkShop/Invoke-PodmanRootless.yml
+++ b/AnsibleWorkShop/Invoke-PodmanRootless.yml
@@ -1,6 +1,6 @@
 # code: language=ansible
 ---
-- hosts: kube-2 # kube-2
+- hosts: kube-1 # kube-2
   gather_facts: yes
   tasks:
      # https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html#including-roles-dynamic-reuse
@@ -13,16 +13,15 @@
             state: present
         vars_cgroups_delegation:
           all_users:
-            skipped: false
             state: present
-            present_override: true
-            resources: cpu io
+            present_override: false
+            resources: cpu
           per_user:
-            skipped: true
-            state: absent
+            state: skipped
             resources: io
-        # vars_sub_ids:
-        #   state: skipped
+        vars_sub_ids:
+          state: present
+          present_override: false
         # vars_kernel_modules:
         #   state: skipped
         # vars_pam_limits:
