--- a/AnsibleWorkShop/roles/ansible-podman-rootless-provision/defaults/main.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-provision/defaults/main.yml
@@ -110,6 +110,44 @@ switch_kernel_modules:
     state: absent
 
 
+#--- Podman config
+defaults_app_config:
+  podman:
+    containers_conf:
+      state: skipped
+      path: /home/{{ target_user }}/.conf/containers/containers.conf.d/{{ role_name }}.conf
+      content: |
+        [containers]
+        # log_driver="k8s-file"
+        # log_size_max="10m"
+        userns = "keep-id"
+    storage_conf:
+      state: skipped
+      path: /home/{{ target_user }}/.conf/containers/storage.conf
+      content:
+    registries_conf:
+      state: skipped
+      path: /home/{{ target_user }}/.conf/containers/registries.conf
+      content:
+
+app_config: "{{ defaults_app_config | ansible.builtin.combine(vars_app_config, recursive=True) }}"
+
+switch_app_config_podman_containers_conf:
+  case_other: "{{ app_config.podman.containers_conf }}"
+  case_pkg_absent: 
+    state: absent
+
+switch_app_config_podman_storage_conf:
+  case_other: "{{ app_config.podman.storage_conf }}"
+  case_pkg_absent: 
+    state: absent
+
+switch_app_config_podman_registries_conf:
+  case_other: "{{ app_config.podman.registries_conf }}"
+  case_pkg_absent: 
+    state: absent
+
+
 #--- service
 defaults_service:
   podman_socket:
