--- a/AnsibleWorkShop/roles/ansible-podman-rootless-provision/vars/main.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-provision/vars/main.yml
@@ -28,10 +28,11 @@ target_user: "{{ ansible_user }}"
 # vars_cgroups_delegation.all_users: 
 #   state: present/absent
 #     present:
-#       for systemd distro: config cgroup delegate in /etc/systemd/system/user@.service.d/delegate.conf 
-#       according to the setting in vars_cgroups_delegation.all_users.resources
-#       
-#       for openrc distro: config cgroup mode to unified in /etc/rc.conf
+#       for systemd distro: 
+#         config cgroup delegate in /etc/systemd/system/user@.service.d/delegate.conf 
+#         according to the setting in vars_cgroups_delegation.all_users.resources
+#       for openrc distro: 
+#         set "rc_cgroup_mode=unified" in /etc/rc.conf
 #     absent:
 #       remove cgroup config with this role own partten (if exist)
 #     skipped:
@@ -41,11 +42,6 @@ target_user: "{{ ansible_user }}"
 #
 # per_user cgroup delegation settings only work for systemd base distro
 # vars_cgroups_delegation.pre_user: 
-#   : true/false
-#     true:
-#       skip the cgroup delegation config process for each target user
-#     false:
-#       implement the cgroup delegation config process for each target user
 #   state: present/absent/skipped
 #     present:
 #       for systemd distro: config cgroup delegate in /etc/systemd/system/user@{{ target_user_uid }}.service.d/delegate.conf 
@@ -72,10 +68,10 @@ vars_cgroups_delegation:
 #   https://github.com/containers/podman/blob/main/rootless.md#:~:text=Podman%20can%20not%20create%20containers%20that%20bind%20to%20ports%20%3C%201024
 # vars_sysctl_params.state: present/absent/skipped
 #   present:
-#     create sysctl conf file for podman-rootless rootless 
-#     according to vars_sysctl_params.list
+#     create sysctl conf file /etc/sysctl.d/{{ role_name }}.conf 
+#     for podman rootless according to vars_sysctl_params.list
 #   absent：
-#     delete sysctl conf file for podman-rootless rootless
+#     delete sysctl conf file /etc/sysctl.d/{{ role_name }}.conf 
 #   skip：
 #     skip the implement of sysctl permission config task 
 # note: if podman package is not there, the sysctl conf file create by this role 
@@ -95,10 +91,10 @@ vars_sysctl_params:
 #   https://phoenixnap.com/kb/ulimit-linux-command
 # vars_pam_limits.state: present/absent/skipped
 #   present: 
-#     create security limits drop-in conf file for podman-rootless rootless 
-#     according to vars_pam_limits.list
+#     create security limits drop-in conf file /etc/security/limits.d/{{ role_name }}-{{ target_user }}.conf
+#     for podman rootless according to vars_pam_limits.list
 #   absent:
-#     delete security limits drop-in conf file for podman-rootless rootless
+#     delete security limits drop-in conf file for podman rootless 
 #   skip:
 #     skip the implement of security limits drop-in conf file
 # note: if podman package is not there, the security limits drop-in conf file create by this role 
@@ -145,7 +141,7 @@ vars_sub_ids:
     start_from: 100000
     offset: 65536
 
-
+# kernel_modules:
 # background:
 #   https://github.com/containers/podman/commit/eab5a4cfb7b3bbb63cd2a1d9a5a69e9bc32d4cef#diff-d77924824df4702948dd3cfd6e377da2eb169d2811b4bfe072061f1f9aee48a0
 #   https://virtualzone.de/posts/alpine-podman/#install-podman
@@ -164,17 +160,53 @@ vars_kernel_modules:
     - ip_tables
 
 
+# podman config
+# background:
+#   containers.conf
+#   https://github.com/containers/podman/blob/main/docs/tutorials/rootless_tutorial.md#user-configuration-files
+#   https://github.com/containers/common/blob/main/docs/containers.conf.5.md
+#   https://github.com/containers/common/blob/main/pkg/config/testdata/containers_default.conf
+#   https://www.redhat.com/sysadmin/rootless-podman-user-namespace-modes#:~:text=Change%20the%20default%20user%20namespace%20mode
+#   storage.conf
+#   https://github.com/containers/podman/blob/main/vendor/github.com/containers/storage/storage.conf
+#   https://github.com/containers/storage/blob/main/docs/containers-storage.conf.5.md
+#   registries.conf
+#   https://github.com/containers/image/blob/main/docs/containers-registries.conf.5.md
+#   https://github.com/containers/podman/blob/main/test/registries.conf
+var_app_config:
+  podman:
+    containers_conf:
+      state: skipped
+      path: /home/{{ target_user }}/.conf/containers/containers.conf.d/{{ role_name }}.conf
+      content: |
+        [containers]
+        # log_driver="k8s-file"
+        # log_size_max="10m"
+        userns = "keep-id"
+    storage_conf:
+      state: skipped
+      path: /home/{{ target_user }}/.conf/containers/storage.conf
+      content:
+    registries_conf:
+      state: skipped
+      path: /home/{{ target_user }}/.conf/containers/registries.conf
+      content:
+
+
+
+# service
 # background: 
 #   https://github.com/containers/podman/blob/main/docs/tutorials/socket_activation.md#socket-activation-of-the-api-service
 #   https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/building_running_and_managing_containers/assembly_using-the-container-tools-api_building-running-and-managing-containers#proc_enabling-the-podman-api-using-systemd-in-rootless-mode_assembly_using-the-container-tools-api
 #   https://wiki.archlinux.org/title/Systemd/User#Automatic_start-up_of_systemd_user_instances
-# vars_service.podman_socket.skipped: true/false, 
-#   true:
-#     skip the process of podman.socket service
-#   false:
-#     start the process of podman.socket service 
-#     according to the config in vars_service.podman_socket.user_scope and
-#     vars_service.podman_socket.system_scope
+# vars_service.podman_socket.user_scope: and
+# vars_service.podman_socket.system_scope:
+#   skipped: true/false, Whether to implement the user_scope / system_scope podman.socket service
+#   enabled: true/false, Whether the service should start on boot.
+#   state: reloaded/restarted/started/stopped, 
+#     started/stopped: are idempotent actions that will not run commands unless necessary.
+#     restarted: will always bounce the service.
+#     reloaded: will always reload.
 # vars_service.systemd_lingering.state: present/absent/skipped
 #   enable:
 #     enable the target user systemd lingering, aka: loginctl enable-linger {{ target_user }}
