--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -1,9 +1,20 @@
+# Host vyos
+#     StrictHostKeyChecking no
+#     HostName 192.168.255.1
+#     User vagrant
+#     IdentityFile ~/.ssh/vagrant
+#     Port 22
+
 Host vyos
-    StrictHostKeyChecking no
     HostName 192.168.255.1
     User vagrant
-    IdentityFile ~/.ssh/vagrant
     Port 22
+    UserKnownHostsFile /dev/null
+    StrictHostKeyChecking no
+    PasswordAuthentication no
+    IdentityFile ~/.vagrant.d/insecure_private_key
+    IdentitiesOnly yes
+    LogLevel FATAL
 
 Host InfSvc-oSLMicro
     StrictHostKeyChecking no
