--- a/VagrantWorkShop/VyOS/Vagrantfile
+++ b/VagrantWorkShop/VyOS/Vagrantfile
@@ -14,6 +14,7 @@ Vagrant.configure("2") do |config|
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "VYOS13x-WAN-G2"
   config.vm.network "private_network", bridge: "Default Switch"
+  config.ssh.insert_key = false
   
   config.vm.provider "hyperv" do |hv, config|
     hv.vmname = "VyOS13x-G2"
@@ -22,9 +23,9 @@ Vagrant.configure("2") do |config|
     hv.memory = 768
     config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
       trigger.info = "Add new network addapter"
+      # Start-BitsTransfer 'https://raw.githubusercontent.com/juewuy/ShellClash/master/install.sh'"}
       trigger.run = {inline: "./Add-VMNetworkAdapter.ps1 -vmname VyOS13x-G2;
-                              Start-BitsTransfer 'https://raw.githubusercontent.com/juewuy/ShellClash/master/install.sh';
-                              ./Run-Dos2Unix.ps1"}
+                              Start-BitsTransfer 'https://raw.githubusercontent.com/juewuy/ShellClash/1.7.0/install.sh'"}
     end
   end
   config.vm.provision "shell", path: "./provisionConfig-LAN.sh"
